# Naphome-0.9

./: .gitignore  IMPLEMENTATION_PLAN.md  TODO.md
logs/: .7380183c1edd62d469d0a79ca875941de369928a-audit.json
naphome_phase09_test/: CMakeLists.txt  DRIVER_STATUS.md  PROJECT_MOVED.md  README.md  README_TESTING.md  TODO_DEMO.md  grab_console.sh  package.json  partitions.csv  playwright.config.js  sdkconfig.bak  sdkconfig.defaults  sdkconfig.defaults.esp32s3  test_nap_local.js  test_nap_local.sh
naphome_phase09_test/main/: CMakeLists.txt  generate_wav.py  idf_component.yml  naphome_test_suite.c  web_server.c  web_server.h
naphome_phase09_test/main/drivers/: bh1750_driver.c  bh1750_driver.h  scd30_driver.c  scd30_driver.h  sgp30_driver.c  sgp30_driver.h  sht30_driver.c  sht30_driver.h
